--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "web3": "^0.20.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "npm": "^6.0.1",
+    "sweetalert": "^2.1.0"
   }
 }
